--- a/package.json
+++ b/package.json
@@ -54,7 +54,6 @@
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-prettier": "^3.1.3",
     "gh-pages": "^3.0.0",
-    "prettier": "^2.0.5",
-    "eslint": "^7.4.0"
+    "prettier": "^2.0.5"
   }
 }
